# rust-to-gif

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  docker-compose.yml  fixture.sql
back/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  rustfmt.toml
backend/migrations/: 0001_create-users_up.sql  0002_create-password-reset-tokens_down.sql  0002_create-password-reset-tokens_up.sql  0003_add-last-login-to-users_down.sql  0003_add-last-login-to-users_up.sql
backend/src/: main.rs  postgres.rs  user.rs
backend/src/auth/: auth_controller.rs  auth_dto.rs  auth_errors.rs  auth_jwt.rs  auth_routes.rs  auth_service.rs  dto.rs  jwt.rs  mod.rs
backend/src/common/: errors.rs  mod.rs  responses.rs  responses_dto.rs  responses_status_codes.rs
backend/src/config/: config.rs  mod.rs
backend/src/postgres/: config.rs  lib.rs
backend/src/protected/: protected_routes.rs
backend/src/tests/: password_validator_tests.rs  responses_tests.rs
backend/src/tests/samples/: responses_sample.json
backend/src/user/: mod.rs  user.rs  user_controller.rs  user_dto.rs  user_errors.rs  user_methods.rs  user_password_reset.rs  user_repository.rs  user_routes.rs  user_service.rs
backend/src/utils/: mod.rs  password_controller.rs  password_generator.rs  password_routes.rs  password_validator.rs  password_validator_tests.rs
front/: Dockerfile
frontend/: .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite-plugin-eslint.d.ts  vite.config.ts
src/: main.rs
src/postgres/: config.rs  lib.rs
src/user/: user.rs
src/video/: ffmpeg.rs
