[package]
name = "rust_to_gif"
version = "0.1.0"
edition = "2021"

# Actix and web-related dependencies
[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-session = "0.10.1"
actix-cors = "0.7.0"
actix-files = "0.6"

# Deadpool for PostgreSQL connection pooling
deadpool-postgres = "0.14.0"

# Postgres and database-related dependencies
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-0_8"] }
tokio-postgres-migration = "0.1.0"

# Logging and environment management
log = "0.4"
env_logger = "0.11.5"
dotenvy = "0.15"

# Authentication (OAuth) dependencies (sans 'reqwest-async')
oauth2 = "4.0"
reqwest = { version = "0.12.8", features = ["json", "gzip", "cookies"] }

# JSON and Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing with Argon2
argon2 = "0.5.2"
rand = "0.8"

# Timestamps and date/time handling
chrono = { version = "0.4", features = ["serde", "clock"] }

# Unique ID generation (UUID)
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "1.0"
async-trait = "0.1"

# TLS for secure connections (e.g., HTTPS, OAuth)
postgres-native-tls = "0.5.0"
native-tls = { version = "0.2", features = ["vendored"] }

# Optional: JWT for session management (if you plan to use JWTs later)
jsonwebtoken = "9.3.0"

[[bin]]
name = "rust_to_gif"
path = "src/main.rs"
