[package]
name = "rust-to-gif"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "7.1.0"
image = "0.25.2"
gif = "0.13.1"
actix-web = "4.0.0-beta.8"
deadpool-postgres = "0.14.0"
env_logger = "0.11.5"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = "^0.7"
tokio-postgres-migration = "^0.1"
