[package]
name = "rust_to_gif"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1.0"
image = "0.25.2"
gif = "0.13.1"
tokio-postgres = { version = "0.7.12", features = ["with-uuid-0_8"] }
actix-web = "4.0"
dotenvy = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
deadpool-postgres = "0.14.0"
log = "0.4"
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres-migration = "0.1.0"
argon2 = "0.5.2"
config = "0.14.0"
postgres-native-tls = "0.5.0"


[[bin]]
name = "rust_to_gif"
path = "src/main.rs"
