[package]
name = "rust_to_gif"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1.0"
image = "0.25.5"
gif = "0.13.1"
actix-web = { version = "4.0.1", features = ["cookies"] }
rand = "0.8.5"
regex = "1.5.6"
once_cell = "1.17.1"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
async-trait = "0.1.64"
deadpool-postgres = "0.14.0"
log = "0.4.20"
thiserror = "1.0.40"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
jsonwebtoken = "9.3.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres-migration = "0.1.0"
tokio-postgres = { version = "0.7.12", features = ["with-uuid-0_8"] }
dotenvy = "0.15.6"
argon2 = "0.5.2"
config = "0.14.1"
postgres-native-tls = "0.5.0"
bindgen = "0.70.1"
clang-sys = "1.8.1"

[[bin]]
name = "rust_to_gif"
path = "src/main.rs"
